--- a/Voice Recorder/Voice Recorder/Base.lproj/Main.storyboard
+++ b/Voice Recorder/Voice Recorder/Base.lproj/Main.storyboard
@@ -61,26 +61,40 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <swipeGestureRecognizer direction="left" id="5xy-jr-aF0">
                     <connections>
-                        <segue destination="Era-K9-Z0s" kind="push" id="Ed8-Rg-xnE"/>
+                        <segue destination="s3o-dy-Zjc" kind="push" id="P4M-Cs-6zH"/>
                     </connections>
                 </swipeGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="202" y="300"/>
         </scene>
-        <!--Saves View Controller-->
-        <scene sceneID="dd1-Fn-P32">
+        <!--Table View Controller-->
+        <scene sceneID="LwZ-Ve-1uJ">
             <objects>
-                <viewController id="Era-K9-Z0s" customClass="SavesViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="w7H-Ff-mR4">
+                <tableViewController id="s3o-dy-Zjc" customClass="TableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="SRv-Dn-ntg">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="ZtC-TL-daO"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="cSj-VD-Q3D" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyCell" id="K0S-UH-ai5">
+                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="K0S-UH-ai5" id="sR1-yk-z0d">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="s3o-dy-Zjc" id="fHT-SN-3wh"/>
+                            <outlet property="delegate" destination="s3o-dy-Zjc" id="3iR-0A-0vl"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="EWH-oC-cbw"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NSh-sN-nYc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="665" y="195"/>
+            <point key="canvasLocation" x="662" y="270"/>
         </scene>
     </scenes>
 </document>
