--- a/Currency Converter/Currency Converter/Base.lproj/Main.storyboard
+++ b/Currency Converter/Currency Converter/Base.lproj/Main.storyboard
@@ -17,14 +17,14 @@
                                 <rect key="frame" x="20" y="20" width="46" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Foreign" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2ed-AJ-dF5">
                                 <rect key="frame" x="242" y="20" width="58" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" id="MtD-tv-nuv">
@@ -81,7 +81,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="foreignCurrencyLabel" destination="2ed-AJ-dF5" id="9ss-1n-uOg"/>
                         <outlet property="foreignField" destination="5eo-Ew-5QF" id="k3g-wH-157"/>
+                        <outlet property="homeCurrencyLabel" destination="4s3-dd-jHR" id="rVG-S4-bVl"/>
                         <outlet property="homeField" destination="MtD-tv-nuv" id="vPr-C3-bJo"/>
                     </connections>
                 </viewController>
