--- a/Currency Converter/Currency Converter/Base.lproj/Main.storyboard
+++ b/Currency Converter/Currency Converter/Base.lproj/Main.storyboard
@@ -123,7 +123,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="796" y="184"/>
+            <point key="canvasLocation" x="722" y="184"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="3Kj-0F-hqQ">
@@ -148,20 +148,29 @@
                     <view key="view" contentMode="scaleToFill" id="M1Z-gS-JVK">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="w0Z-ww-8CZ">
+                                <rect key="frame" x="133" y="269" width="55" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Convert"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="push" id="naL-Ae-fs2"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Currency Converter!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="3Cu-qD-d77">
+                                <rect key="frame" x="35" y="150" width="251" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
-                        <connections>
-                            <outletCollection property="gestureRecognizers" destination="Lac-Nn-lSU" appends="YES" id="Ztw-Ll-4zv"/>
-                        </connections>
                     </view>
                     <navigationItem key="navigationItem" id="XcX-e0-p5W"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vcc-E5-yfE" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <swipeGestureRecognizer direction="left" id="Lac-Nn-lSU">
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="push" id="o6X-8f-Y5u"/>
-                    </connections>
-                </swipeGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="308" y="123"/>
         </scene>
